lab1/Test/L1-A-1-91.cmm
float ;
int ;
float VGJkHpqsbqZIS1M ( ) {
  float hHCegFIpAsRO0AWOKb [ 3141795 ] [ 653711877 
    ] ;
  if ( 464161714 [ W5VEqLT ] * wrEjtfqYBMMuPNXg5WUC 
    + xvbOHY1N5M4rv + qeOiExw03f - VUrwWDL7K <= NwJTlJBwJml 
    > gh0rRPB3 && q && hnYsy61DZaSnbY_qe7x && wkjDo0Hafm8Jh 
    struct && fM6knlJf2lpzbf )   AZpS ;
else   I ;

  if ( ! BZl8PgMqB3SPmG_0rqo / pEquZnRWAzrR8M_3THQ 
    * return JqLvl7jSXCWLLI6q27Q / H / j0jYySvaAVAM25cx 
    * FYI * BewNpwLd2 )   bI ;
else   if ( v0Jr1G8PEIH9_W )   NXGUiovJ5il ;


}
struct Ltb7TYaK Uy1wTODSZ ( struct FKTxfFKGz {
}!= llzffGBw ) {
}
